--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/morgan": "^1.9.2",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
