--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/morgan": "^1.9.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
