--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/morgan": "^1.9.2",
+    "@types/validator": "^13.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
+    "slugify": "^1.4.6",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9"
