--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
     "@types/morgan": "^1.9.2",
+    "@types/nodemailer": "^6.4.0",
     "@types/validator": "^13.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.17",
     "slugify": "^1.4.6",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3",
