--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/express-mongo-sanitize": "^1.3.2",
     "@types/express-rate-limit": "^5.1.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
@@ -23,7 +24,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.1",
     "express-rate-limit": "^5.2.3",
+    "helmet": "^4.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
@@ -31,7 +34,8 @@
     "slugify": "^1.4.6",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.9"
