--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express-mongo-sanitize": "^1.3.2",
     "@types/express-rate-limit": "^5.1.0",
+    "@types/hpp": "^0.2.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
     "@types/morgan": "^1.9.2",
@@ -27,6 +28,7 @@
     "express-mongo-sanitize": "^2.0.1",
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.3.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
